--- a/event_confirmation.html
+++ b/event_confirmation.html
@@ -1170,7 +1170,7 @@
                                                     <strong style="
                                                           font-family: 'museo-sans-bold',
                                                             Arial, Helvetica,
-                                                            serif;
+                                                            serif; font-weight: 900;
                                                         ">
                                                       Wann:
                                                     </strong>
@@ -1184,7 +1184,7 @@
                                                     <strong style="
                                                           font-family: 'museo-sans-bold',
                                                             Arial, Helvetica,
-                                                            serif;
+                                                            serif; font-weight: 900;
                                                         ">
                                                       Wo:
                                                     </strong>
@@ -1345,6 +1345,8 @@
                                         ">
                                       <tbody align="center">
                                         <tr>
+                                          <!--[if mso]>
+
                                           <td align="center"
                                             class="mcnButtonBlockInner" style="
                                                 padding-top: 0;
@@ -1360,21 +1362,20 @@
                                                   border-radius: 0px;
                                                 ">
                                               <tbody>
-                                                <!--[if mso]>
-<table cellpadding="0" cellspacing="0" border="0">
-  <tr>
-    <td align="center" class="mcnButtonContent" style="padding: 15px 60px; background-color: #27348b;" valign="middle">
-      <a class="mcnButton" href="*|EVENT_UNREGISTER_URL|*" style="font-weight: 900; font-size: 20px; line-height: 100%; text-align: center; color: #ffffff; font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif; display: block; border: 2px solid #27348b; color: #27348b; padding: 10px 20px; text-decoration: none;" target="_blank" mc:edit="nichtteilnehmen" title="NICHT TEILNEHMEN">
-        <strong>Nicht teilnehmen</strong>
-      </a>
-    </td>
-  </tr>
-</table>
-<![endif]-->
-                                                <!--[if !mso]> <!-- The following code will be applied to non-Outlook clients -->
+                                                  <table cellpadding="0" cellspacing="0" border="0">
+                                                    <tr>
+                                                      <td align="center" class="mcnButtonContent" style="padding: 15px 60px; background-color: #27348b;" valign="middle">
+                                                        <a class="mcnButton" href="*|EVENT_UNREGISTER_URL|*" style="font-weight: 900; font-size: 20px; line-height: 100%; text-align: center; color: #ffffff; font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif; display: block; border: 2px solid #27348b; color: #27348b; padding: 10px 20px; text-decoration: none;" target="_blank" mc:edit="nichtteilnehmen" title="NICHT TEILNEHMEN">
+                                                          <strong>Nicht teilnehmen</strong>
+                                                        </a>
+                                                      </td>
+                                                    </tr>
+                                                  </table>
                                               </tbody>
                                             </table>
                                           </td>
+                                          <![endif]-->
+                                          <!--[if !mso]> <!-- The following code will be applied to non-Outlook clients -->
                                           <td align="center"
                                             class="mcnButtonContent"
                                             style="padding: 15px 60px; border: 2px solid #27348b; color: #27348b;"
