--- a/veranstalltung_einladung--new.html
+++ b/veranstalltung_einladung--new.html
@@ -194,7 +194,7 @@
         /*@editable*/
         color: #e84e0f !important;
         /*@editable*/
-        font-family: 'museo-sans', Helvetica, sans-serif !important;
+        font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif !important;
         /*@editable*/
         font-size: 55px;
         /*@editable*/
@@ -213,7 +213,7 @@
         /*@editable*/
         color: #ffffff !important;
         /*@editable*/
-        font-family: 'museo-sans-bold', Helvetica, sans-serif !important;
+        font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif !important;
         /*@editable*/
         font-size: 24px;
         /*@editable*/
@@ -232,7 +232,7 @@
         /*@editable*/
         color: #000000 !important;
         /*@editable*/
-        font-family: 'museo-sans-bold', Helvetica, sans-serif !important;
+        font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif !important;
         /*@editable*/
         font-size: 18px !important;
         /*@editable*/
@@ -254,7 +254,7 @@
 	*/
       #templatePreheader {
         /*@editable*/
-        background-color: #;
+        /* background-color: #; */
         /*@editable*/
         border-top: 0;
         /*@editable*/
@@ -271,7 +271,7 @@
         /*@editable*/
         color: #000000;
         /*@editable*/
-        font-family: Helvetica;
+        font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif;
         /*@editable*/
         font-size: 10px;
         /*@editable*/
@@ -301,7 +301,7 @@
 	*/
       #templateHeader {
         /*@editable*/
-        background-color: #;
+        /* background-color: #; */
         /*@editable*/
         border-top: 0;
         /*@editable*/
@@ -318,7 +318,7 @@
         /*@editable*/
         color: #000000;
         /*@editable*/
-        font-family: Helvetica;
+        font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif;
         /*@editable*/
         font-size: 14px;
         /*@editable*/
@@ -416,7 +416,7 @@
         /*@editable*/
         color: #000000;
         /*@editable*/
-        font-family: Helvetica;
+        font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif;
         /*@editable*/
         font-size: 10px;
         /*@editable*/
@@ -624,14 +624,14 @@
         font-family: 'museo-sans-bold';
         font-style: normal;
         font-weight: 900;
-        src: url(Fontspring-DEMO-MuseoSans_900.otf) format('opentype');
+        src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf) format('opentype');
       }
 
       @font-face {
-        font-family: 'museo-sans-semibold';
+        font-family: 'museo-sans';
         font-style: normal;
-        font-weight: bolder;
-        src: url(Fontspring-DEMO-MuseoSans_700.otf) format('opentype');
+        font-weight: 700;
+        src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf) format('opentype');
       }
 
       @media only screen and (max-width: 480px) {
@@ -817,7 +817,7 @@
 
       .big-title {
         color: #e84e0f !important;
-        font-family: 'museo-sans', sans-serif !important;
+        font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif !important;
         font-style: normal !important;
         font-weight: 900 !important;
       }
@@ -1183,8 +1183,7 @@
                                                         class="big-title null"
                                                         style="
                                                           color: #e84e0f !important;
-                                                          font-family: 'museo-sans',
-                                                            sans-serif !important;
+                                                          font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif !important;
                                                           font-weight: 900 !important;
                                                         "
                                                       >
@@ -1341,9 +1340,7 @@
                                                           text-align: center !important;
                                                           line-height: 125%;
                                                           color: #ffffff !important;
-                                                          font-family: 'museo-sans-bold',
-                                                            helvetica,
-                                                            sans-serif !important;
+                                                          font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif !important;
                                                           font-weight: 900;
                                                         "
                                                         mc:edit="headline2"
@@ -1358,8 +1355,7 @@
                                                       style="
                                                         font-size: 18px;
                                                         text-align: center !important;
-                                                        font-family: 'museo-sans',
-                                                          sans-serif !important;
+                                                        font-family: 'museo-sans', Arial, Helvetica, sans-serif !important;
                                                         font-weight: 700;
                                                         line-height: 125%;
                                                         color: #ffffff !important;
@@ -1374,15 +1370,15 @@
                                                         <span
                                                           style="color: #ffffff"
                                                         >
-                                                          <strong>Wann:</strong>
+                                                          <strong style="
+                                                          font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif; font-weight: 900;
+                                                        ">Wann:</strong>
                                                           Dienstag, 12. Juni
                                                           2018, 12:00
                                                           &ndash;&nbsp;14:00 Uhr
                                                           <br />
                                                           <strong
-                                                            style="
-                                                              font-family: museo-sans-bold,
-                                                                sans-serif !important;
+                                                            style="font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif !important;
                                                               font-weight: 900;
                                                             "
                                                           >
@@ -1462,8 +1458,7 @@
                                                                           text-align: center;
                                                                           text-decoration: none;
                                                                           color: #e84e0f;
-                                                                          font-family: 'museo-sans-bold',
-                                                                            sans-serif !important;
+                                                                          font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif !important;
                                                                         "
                                                                         target="_blank"
                                                                         title="JETZT ANMELDEN"
@@ -1547,8 +1542,7 @@
                                                                           text-align: center;
                                                                           text-decoration: underline;
                                                                           color: #ffffff;
-                                                                          font-family: 'museo-sans',
-                                                                            sans-serif !important;
+                                                                          font-family: 'museo-sans', Arial, Helvetica, sans-serif !important;
                                                                           font-weight: 700;
                                                                         "
                                                                         target="_blank"
@@ -1576,8 +1570,7 @@
                                                       style="
                                                         font-size: 18px;
                                                         text-align: center !important;
-                                                        font-family: 'museo-sans',
-                                                          sans-serif !important;
+                                                        font-family: 'museo-sans', Arial, Helvetica, sans-serif !important;
                                                         font-weight: 700;
                                                         font-style: normal !important;
                                                         color: #ffffff;
@@ -1697,8 +1690,7 @@
                                                           href="http://www.agenda-austria.at"
                                                           style="
                                                             color: #000000;
-                                                            font-family: 'museo-sans-bold',
-                                                              sans-serif !important;
+                                                            font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif !important;
                                                             font-weight: 900;
                                                           "
                                                           target="_blank"
@@ -1820,8 +1812,7 @@
                                                                 style="
                                                                   display: block;
                                                                   margin: 0;
-                                                                  font-family: 'museo-sans-bold',
-                                                                    sans-serif;
+                                                                  font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif;
                                                                   font-size: 20px;
                                                                   font-weight: 900;
                                                                   color: #000000;
@@ -2042,12 +2033,12 @@
                                                             >
                                                               <a
                                                                 style="
-                                                                  font-family: 'museo-sans',
-                                                                    sans-serif !important;
+                                                                  font-family: 'museo-sans', Arial, Helvetica, sans-serif !important;
                                                                   color: #e84e0f;
                                                                   font-size: 16px;
                                                                   font-weight: 700;
                                                                   line-height: 125%;
+                                                                  text-decoration: underline;
                                                                 "
                                                                 class="link footer-link"
                                                                 href="#link"
@@ -2060,12 +2051,12 @@
                                                               <br />
                                                               <a
                                                                 style="
-                                                                  font-family: 'museo-sans',
-                                                                    sans-serif !important;
+                                                                  font-family: 'museo-sans', Arial, Helvetica, sans-serif !important;
                                                                   color: #e84e0f;
                                                                   font-size: 16px;
                                                                   font-weight: 700;
                                                                   line-height: 125%;
+                                                                  text-decoration: underline;
                                                                 "
                                                                 class="link footer-link"
                                                                 href="*|UPDATE_PROFILE|*"
@@ -2077,12 +2068,12 @@
                                                               <br />
                                                               <a
                                                                 style="
-                                                                  font-family: 'museo-sans',
-                                                                    sans-serif !important;
+                                                                  font-family: 'museo-sans', Arial, Helvetica, sans-serif !important;
                                                                   color: #e84e0f;
                                                                   font-size: 16px;
                                                                   font-weight: 700;
                                                                   line-height: 125%;
+                                                                  text-decoration: underline;
                                                                 "
                                                                 class="link footer-link"
                                                                 href="*|UNSUB|*"
