--- a/event_confirmation.html
+++ b/event_confirmation.html
@@ -605,18 +605,20 @@
         url(https://files.qmax.us/agenda/newsletter/fonts/SaboNextLTPro/SabonNextLTPro-Bold.otf) format('opentype');
     }
 
+
     @font-face {
       font-family: 'museo-sans-bold';
       font-style: normal;
       font-weight: 900;
-      src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf) format('opentype');
+      src: url(https://raw.githubusercontent.com/dmitry-abss/monopol/main/fonts/MuseoSans_900.woff) format('woff'), url(https://raw.githubusercontent.com/dmitry-abss/monopol/main/fonts/MuseoSans_900.otf) format('opentype');
     }
 
     @font-face {
       font-family: 'museo-sans';
       font-style: normal;
       font-weight: 700;
-      src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf) format('opentype');
+      src: url(https://raw.githubusercontent.com/dmitry-abss/monopol/main/fonts/MuseoSans_700.woff) format('woff'), url(https://raw.githubusercontent.com/dmitry-abss/monopol/main/fonts/MuseoSans_700.otf) format('opentype');
+      ;
     }
 
     @media only screen and (max-width: 480px) {
