--- a/spende.html
+++ b/spende.html
@@ -266,7 +266,7 @@
 	*/
     #templateHeader {
       /*@editable*/
-      background-color: #;
+      /* background-color: #; */
       /*@editable*/
       border-top: 0;
       /*@editable*/
@@ -313,7 +313,7 @@
 	*/
     #templateBody {
       /*@editable*/
-      background-color: #;
+      /* background-color: #; */
       /*@editable*/
       border-top: 0;
       /*@editable*/
@@ -348,11 +348,11 @@
 	*/
     .bodyContainer .mcnTextContent a {
       /*@editable*/
-      color: #27348b;
+      color: #000000;
       /*@editable*/
-      font-weight: bold;
+      font-weight: 700;
       /*@editable*/
-      font-family: 'museo-sans-bold', Arial, Helvetica, sans-serif !important;
+      font-family: 'museo-sans', Arial, Helvetica, sans-serif !important;
       /*@editable*/
       /* text-decoration: none; */
     }
@@ -663,14 +663,15 @@
       font-family: 'museo-sans-bold';
       font-style: normal;
       font-weight: 900;
-      src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf) format('opentype');
+      src: url(https://raw.githubusercontent.com/dmitry-abss/monopol/main/fonts/MuseoSans_900.woff) format('woff'), url(https://raw.githubusercontent.com/dmitry-abss/monopol/main/fonts/MuseoSans_900.otf) format('opentype');
     }
 
     @font-face {
       font-family: 'museo-sans';
       font-style: normal;
       font-weight: 700;
-      src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf) format('opentype');
+      src: url(https://raw.githubusercontent.com/dmitry-abss/monopol/main/fonts/MuseoSans_700.woff) format('woff'), url(https://raw.githubusercontent.com/dmitry-abss/monopol/main/fonts/MuseoSans_700.otf) format('opentype');
+      ;
     }
 
     @media only screen and (max-width: 480px) {
@@ -879,7 +880,7 @@
                                         <tr>
                                           <td valign="top"
                                             class="mcnTextContent" style="
-                                                padding: 0px 18px 9px;
+                                                padding: 0px 0px 9px;
                                                 font-size: 18px;
                                                 line-height: 125%;
                                               ">
@@ -1014,7 +1015,7 @@
                                         <tr>
                                           <td valign="top"
                                             class="mcnTextContent"
-                                            style="padding:0px 18px 9px;font-size:18px;line-height:125%;">
+                                            style="padding:0px 0px 9px;font-size:18px;line-height:125%;">
 
 
                                             <h1 mc:edit="headline">Vielen Dank
@@ -1058,7 +1059,7 @@
                                         <tr>
                                           <td valign="top"
                                             class="mcnTextContent"
-                                            style="padding:0px 18px 9px;font-size:18px;line-height:125%;">
+                                            style="padding:0px 0px 9px;font-size:18px;line-height:125%;">
 
                                             <h4 mc:edit="anrede"><strong>Sehr
                                                 *|IF:SALUTATION=Herr|*geehrter*|ELSE:|*geehrte*|END:IF|*
@@ -1161,11 +1162,9 @@
                                                   <tbody>
                                                     <tr>
                                                       <td valign="top"
-                                                        class="TextContent"
-                                                        style="
-                                                                padding-left: 18px;
-                                                                padding-bottom: 28px;
-                                                              ">
+                                                        class="mcnTextContent" style="
+                                                        padding-bottom: 28px;
+                                                      ">
                                                         <span style="
                                                                   display: block;
                                                                   margin: 0;
@@ -1345,9 +1344,7 @@
                                                         class="mcnTextContent"
                                                         style="
                                                                 padding-top: 0;
-                                                                padding-left: 18px;
                                                                 padding-bottom: 9px;
-                                                                padding-right: 18px;
                                                                 word-break: break-word;
                                                                 color: #202020;
                                                                 font-family: 'museo-sans', Arial, Helvetica, sans-serif !important;
