--- a/spende.html
+++ b/spende.html
@@ -124,7 +124,7 @@
 	*/
 		h1{
 			/*@editable*/color:#27348b !important;
-			/*@editable*/font-family:'museo-sans-bold', Arial, Helvetica, sans-serif !important;
+			/*@editable*/font-family:'museo-sans-bold', Arial Black, Helvetica, sans-serif !important;
 			/*@editable*/font-size:55px;
 			/*@editable*/font-style:normal;
 			/*@editable*/font-weight:900 !important;
@@ -134,7 +134,7 @@
 		}
 		h4{
 			/*@editable*/color:#000000 !important;
-			/*@editable*/font-family:'museo-sans-bold', Arial, Helvetica, sans-serif !important;
+			/*@editable*/font-family:'museo-sans-bold', Arial Black, Helvetica, sans-serif !important;
 			/*@editable*/font-size:20px !important;
 			/*@editable*/font-style:normal;
 			/*@editable*/font-weight:900 !important;
@@ -392,7 +392,12 @@
 			/*@editable*/line-height:125% !important;
 		}
 
-}	@media only screen and (max-width: 480px){
+}	@font-face {font-family: 'SabonNextLTPro-Italic';      font-style: italic;      font-weight: normal;      src: local(SabonNextLTPro-Italic),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.woff) format('woff'),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.otf) format('opentype');}
+	@font-face {font-family: 'SabonNextLTPro-Regular';      font-style: normal;      font-weight: normal;      src: local(SabonNextLTPro-Regular),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.woff) format('woff'),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.otf) format('opentype');}
+	@font-face {font-family: 'SabonNextLTPro-Bold';      font-style: normal;      font-weight: bold;      src: local(SabonNextLTPro-Bold),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.woff) format('woff'),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.otf) format('opentype');}
+	@font-face {font-family: 'museo-sans-bold';      font-style: normal;      font-weight: 900;      src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.woff) format('woff'), url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf) format('opentype');}
+	@font-face {font-family: 'museo-sans';      font-style: normal;      font-weight: 700;      src: url(https://agenda-austria.at/Newsletter/MuseoSans_700.woff) format('woff'), url(https://agenda-austria.at/Newsletter/MuseoSans_700.otf) format('opentype');      ;}
+	@media only screen and (max-width: 480px){
 	/*
 	@tab Mobile Styles
 	@section heading 4
@@ -403,12 +408,7 @@
 			/*@editable*/line-height:125% !important;
 		}
 
-}	@font-face {font-family: 'SabonNextLTPro-Italic';      font-style: italic;      font-weight: normal;      src: local(SabonNextLTPro-Italic),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.woff) format('woff'),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.otf) format('opentype');}
-	@font-face {font-family: 'SabonNextLTPro-Regular';      font-style: normal;      font-weight: normal;      src: local(SabonNextLTPro-Regular),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.woff) format('woff'),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.otf) format('opentype');}
-	@font-face {font-family: 'SabonNextLTPro-Bold';      font-style: normal;      font-weight: bold;      src: local(SabonNextLTPro-Bold),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.woff) format('woff'),        url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.otf) format('opentype');}
-	@font-face {font-family: 'museo-sans-bold';      font-style: normal;      font-weight: 900;      src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.woff) format('woff'), url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf) format('opentype');}
-	@font-face {font-family: 'museo-sans';      font-style: normal;      font-weight: 700;      src: url(https://agenda-austria.at/Newsletter/MuseoSans_700.woff) format('woff'), url(https://agenda-austria.at/Newsletter/MuseoSans_700.otf) format('opentype');      ;}
-	@media only screen and (max-width: 480px){
+}	@media only screen and (max-width: 480px){
 	/*
 	@tab Mobile Styles
 	@section Boxed Text
@@ -451,8 +451,7 @@
 			/*@editable*/line-height:125% !important;
 		}
 
-}	
-	@media only screen and (max-width: 480px){
+}	@media only screen and (max-width: 480px){
 	/*
 	@tab Mobile Styles
 	@section Body Text
@@ -603,11 +602,11 @@
                     <td align="center" valign="top">
                       <table border="0" cellpadding="0" cellspacing="0" width="600" class="templateContainer">
                         <tr>
-                          <td valign="top" class="headerContainer" style="padding-top:9px;padding-bottom:9px;">
+                          <td valign="top" class="headerContainer">
                             <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnDividerBlock" style="min-width:100%;">
                               <tbody class="mcnDividerBlockOuter">
                                 <tr>
-                                  <td class="mcnDividerBlockInner" style="min-width:100%;padding:10px 18px;">
+                                  <td class="mcnDividerBlockInner" style="min-width:100%;">
                                     <table class="mcnDividerContent" border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width:100%;">
                                       <tbody>
                                         <tr>
@@ -789,7 +788,7 @@
                                                                   display: block;
                                                                   margin: 0;
                                                                   font-family: 'museo-sans-bold',
-                                                                    Arial, Helvetica,
+                                                                    Arial Black, Helvetica,
                                                                     sans-serif;
                                                                   font-size: 20px;
                                                                   font-weight: 900;
