--- a/veranstaltung_bild.html
+++ b/veranstaltung_bild.html
@@ -1052,7 +1052,7 @@
                                                 <tbody>
                                                   <tr>
                                                     <td
-                                                      class="mcnTextContent"
+                                                      class=""
                                                       style="
                                                         padding: 0px 0px 29px;
                                                         font-size: 18px;
@@ -1129,7 +1129,7 @@
                                                   <tr>
                                                     <td
                                                       valign="top"
-                                                      class="mcnTextContent"
+                                                      class=""
                                                       style="
                                                         padding: 0px 0px 9px;
                                                         font-size: 18px;
@@ -1623,7 +1623,7 @@
                                                 <tbody>
                                                   <tr>
                                                     <td
-                                                      class="mcnTextContent"
+                                                      class=""
                                                       style="
                                                         padding: 0px 0px 9px;
                                                         font-size: 18px;
@@ -1780,7 +1780,7 @@
                                                           <tr>
                                                             <td
                                                               valign="top"
-                                                              class="mcnTextContent"
+                                                              class=""
                                                               style="
                                                                 padding-bottom: 28px;
                                                               "
@@ -2001,7 +2001,7 @@
                                                           <tr>
                                                             <td
                                                               valign="top"
-                                                              class="mcnTextContent"
+                                                              class=""
                                                               style="
                                                                 padding-top: 0;
                                                                 padding-bottom: 9px;
@@ -2098,7 +2098,7 @@
                                         <tbody>
                                           <tr>
                                             <td
-                                              class="mcnTextContent"
+                                              class=""
                                               style="
                                                 padding: 28px 0px 9px;
                                                 font-size: 18px;
